# touchscreen-instrument

./: .gitignore  Cargo.toml  Justfile  Makefile  README.md  WIP.md  blindtest-notes  foo.bar  foo.sh  guitarix-config.json  mouse.data  raspberry_debug.sh  raspberry_start.sh  setup.sh
.circleci/: config.yml
ansible/: hosts  tasks.yaml
latency-blindtest/: Cargo.toml
latency-blindtest/src/: main.rs
src/: areas.rs  cli.rs  evdev.rs  generator.rs  guitarix.rs  input.rs  main.rs  quit.rs  run_jack.rs  utils.rs
src/areas/: layouts.rs  mod.rs  note_event_source.rs  rectangle.rs  render.rs  shape.rs
src/sound/: audio_player.rs  generator.rs  hammond.rs  logger.rs  midi.rs  midi_controller.rs  midi_player.rs  mod.rs  wave_form.rs  xrun_logger.rs
src/sound/wave_form/: memoize.rs  mod.rs
src/utils/: mod.rs  thread_worker.rs
