[package]
name = "touchscreen-instrument"
version = "0.1.0"
authors = ["Sönke Hahn <soenkehahn@gmail.com>"]

[dependencies]
jack = "*"
evdev-rs = { git = "https://github.com/ndesh26/evdev-rs", rev = "c271060" }
sdl2 = { version = "*", features = ["gfx"] }
palette = "*"
clap = "*"
nix = "*"
custom_derive = "*"
enum_derive = "*"
skipchannel = { git = "https://github.com/soenkehahn/rust-skipchannel", rev = "20733d3" }

[features]
ci = []
