[package]
name = "touchscreen-instrument"
version = "0.1.0"
authors = ["Sönke Hahn <soenkehahn@gmail.com>"]
license = "GPL-3.0-or-later"

[dependencies]
jack = "*"
evdev-rs = { git = "https://github.com/ndesh26/evdev-rs", rev = "c271060" }
sdl2 = { version = "*", features = ["gfx"] }
palette = "*"
clap = "*"
nix = "*"
custom_derive = "*"
enum_derive = "*"
skipchannel = "*"
chrono = "*"
tempdir = "*"

[features]
ci = []
