[package]
name = "touchscreen-instrument"
version = "0.1.0"
authors = ["Sönke Hahn <soenkehahn@gmail.com>"]
license = "GPL-3.0-or-later"
edition = "2018"

[dependencies]
jack = "0.6.1"
evdev-rs = "0.4.0"
sdl2 = { version = "*", features = ["gfx"] }
palette = "*"
clap = "*"
nix = "*"
custom_derive = "*"
enum_derive = "*"
skipchannel = "*"
chrono = "*"

[dev-dependencies]
pretty_assertions = "*"

[features]
ci = []
